# nats_demo

./: Cargo.toml  Dockerfile  diesel.toml  docker-compose.yaml
migrations/2024-07-03-182706_create_block_summaries/: down.sql  up.sql
src/: consumer.rs  lib.rs  models.rs  producer.rs  schema.rs  types.rs
